--- a/pet-project/package.json
+++ b/pet-project/package.json
@@ -14,6 +14,7 @@
     "lorem-ipsum": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "short-unique-id": "^4.4.4",
     "unique-names-generator": "^4.7.1"
